# recirculador_lpc804

./: .gitignore  Recirculador_v3_14.xml  main.c  new_project_v3_14.xml
Não usado/myFlashMemory/: myFlashMemory.c  myFlashMemory.h
armgcc/: CMakeLists.txt  CMakePresets.json  LPC804_flash copy.ld  LPC804_flash.ld  ide_overrides.cmake  mcux_include.json
armgcc/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Recirculador.elf  build.ninja  cmake_install.cmake  compile_commands.json  new_project.elf  output.map
armgcc/debug/.cmake/api/v1/reply/: cache-v2-051f6b2dc157744562dc.json  cache-v2-2590b38ef53d42bb3628.json  cache-v2-4d1b0fbfd0cbe3575dbd.json  cache-v2-5131b36476a17df75edb.json  cache-v2-55d084acb313c828c89a.json  cache-v2-bd449e3770613ff77dc3.json  cache-v2-f2cfa6347eae7e76a253.json  cmakeFiles-v1-a3404613206209f9b998.json  cmakeFiles-v1-b12cfb7bf61f8b69c14e.json  codemodel-v2-1c6cdec1f30c5afe67b4.json  codemodel-v2-38ce71b59061cd0cda6a.json  codemodel-v2-4c0c68eda006ffab591d.json  codemodel-v2-77e2d7821daea7e32735.json  codemodel-v2-9d71e1fb460d7820389c.json  codemodel-v2-c80decc922b931bdb348.json  codemodel-v2-ca5b2fa0ec8978c68c4a.json  index-2024-04-01T18-00-12-0089.json  index-2026-02-25T20-29-17-0330.json  index-2026-02-27T18-08-08-0645.json  index-2026-03-06T19-51-01-0249.json  index-2026-03-11T20-54-34-0065.json  index-2026-03-24T19-24-05-0326.json  index-2026-04-01T19-48-31-0282.json  target-Recirculador.elf-debug-2b1956b36400dbf9f692.json  target-Recirculador.elf-debug-414c4d0dc0a786105ad0.json  target-Recirculador.elf-debug-5638173af03e0d0fff72.json  target-Recirculador.elf-debug-77ccf7dddb9c29c7909c.json  target-Recirculador.elf-debug-9a357f4711677433a5c9.json  target-Recirculador.elf-debug-c0377924b50b60fd7d6c.json  target-new_project.elf-debug-440a748a8bd4794f7633.json  toolchains-v1-409826d7c6465f1c0cdd.json
include/: app_config.h  board_defs.h  flash_map.h  recirculador.h  system.h
lib/repo/core/devices/LPC802/project_template/: clock_config.c  pin_mux.c
lib/repo/core/devices/LPC804/: LPC804_features.h
lib/repo/core/devices/LPC804/project_template/: clock_config.c  pin_mux.c
lib/repo/core/devices/LPC824/project_template/: clock_config.c  pin_mux.c
lib/repo/core/manifests/: LPCXpresso804_manifest_v3_14.xml
myLib/checksum/: checksum.c
myLib/commonLib/: commonLib.c  commonLib.h
myLib/myADC/: myADC.c  myADC.h
myLib/myControl/: myControl.c  myControl.h
myLib/myFlashMemory/: myFlashMemory.c  myFlashMemory.h
myLib/myFuncControl/: myFuncControl.c  myFuncControl.h
myLib/myGPIO/: myGPIO.c  myGPIO.h
myLib/myI2c/: myI2c.c  myI2c.h
myLib/myInterrupt/: myInterrupt.c  myInterrupt.h
myLib/myNTC_Thermistor/: NTC_10K_3380.h  myNTC_Thermistor.c  myNTC_Thermistor.h
myLib/myRegisters/: myRegisters.c  myRegisters.h
old/: task.c  task.h
old/Old/task/: task.h
old/task/: task.c
src/app/: app_config.c  flash_map.c  log.c  main.c  recirculador.c  system.c
src/drivers/flash_memory/: flash_memory.c  flash_memory.h
src/drivers/gpio/: gpio.c  gpio.h
src/drivers/interrupt/: interrupt.c  interrupt.h
src/drivers/peripheral/adc/: adc.c  adc.h
src/drivers/peripheral/i2c/: i2c.c  i2c.h
src/services/calendar/: calendar.c  calendar.h
src/services/checksum/: checksum.c  checksum.h
src/services/fota/: fota.c  fota.h
src/services/log_lpc804/: log_lpc804.c  log_lpc804.h
src/services/message_manager/: message_manager.c  message_manager.h
src/services/ntc_thermistor/: ntc_thermistor.c  ntc_thermistor.h
src/services/ntc_thermistor/thermistor/: NTC_10K_3380.h
src/services/register_manager/: register_manager.c  register_manager.h
src/services/registers_manager/: registers_addr.h  registers_manager.c  registers_manager.h
src/services/rtc/: rtc.c  rtc.h
src/services/scheduling/: scheduling.c  scheduling.h
src/services/task/: task.c  task.h
src/stubs/: stubs.c
